concord_macros/tests/v5/dsl/fail/fail_custom_auth_placement.stderr
error: custom auth placement is not supported in v5; use bearer/header/query/basic/certificate placement instead
  --> tests/v5/dsl/fail/fail_custom_auth_placement.rs:15:34
   |
15 |         auth custom<CustomUsage>(CustomUsage, key)
   |                                  ^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_custom_auth_placement.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
